tests/rosetta/out/C/averages-mode.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:34Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:34Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static list_int arr1;
static int counts1;
static list_int keys1;
static int i = 0;
static int max1 = 0;
static list_int modes1;
static list_int arr2;
static int counts2;
static list_int keys2;
static int max2 = 0;
static list_int modes2;

int _mochi_main() {
  list_int tmp1 = list_int_create(5);
  tmp1.data[0] = 2;
  tmp1.data[1] = 7;
  tmp1.data[2] = 1;
  tmp1.data[3] = 8;
  tmp1.data[4] = 2;
  arr1 = tmp1;
  map_string_int tmp2 = map_string_int_create(0);
  counts1 = tmp2;
  list_int tmp3 = list_int_create(0);
  keys1 = tmp3;
  list_int tmp4 = list_int_create(0);
  modes1 = tmp4;
  list_int tmp5 = list_int_create(6);
  tmp5.data[0] = 2;
  tmp5.data[1] = 7;
  tmp5.data[2] = 1;
  tmp5.data[3] = 8;
  tmp5.data[4] = 2;
  tmp5.data[5] = 8;
  arr2 = tmp5;
  map_string_int tmp6 = map_string_int_create(0);
  counts2 = tmp6;
  list_int tmp7 = list_int_create(0);
  keys2 = tmp7;
  list_int tmp8 = list_int_create(0);
  modes2 = tmp8;
  while (i < arr1.len) {
    __auto_type v = arr1.data[i];
    if (v in counts1) {
      counts1.data[v] = counts1.data[v] + 1;
    } else {
      counts1.data[v] = 1;
      int tmp9_data[1];
      list_int tmp9 = {1, tmp9_data};
      tmp9.data[0] = v;
      list_int tmp10 = concat_list_int(keys1, tmp9);
      keys1 = tmp10;
    }
    i = i + 1;
  }
  i = 0;
  while (i < keys1.len) {
    __auto_type k = keys1.data[i];
    __auto_type c = counts1.data[k];
    if (c > max1) {
      max1 = c;
    }
    i = i + 1;
  }
  i = 0;
  while (i < keys1.len) {
    __auto_type k = keys1.data[i];
    if (counts1.data[k] == max1) {
      int tmp11_data[1];
      list_int tmp11 = {1, tmp11_data};
      tmp11.data[0] = k;
      list_int tmp12 = concat_list_int(modes1, tmp11);
      modes1 = tmp12;
    }
    i = i + 1;
  }
  char *tmp13 = _str(modes1);
  printf("%s\n", tmp13);
  i = 0;
  while (i < arr2.len) {
    __auto_type v = arr2.data[i];
    if (v in counts2) {
      counts2.data[v] = counts2.data[v] + 1;
    } else {
      counts2.data[v] = 1;
      int tmp14_data[1];
      list_int tmp14 = {1, tmp14_data};
      tmp14.data[0] = v;
      list_int tmp15 = concat_list_int(keys2, tmp14);
      keys2 = tmp15;
    }
    i = i + 1;
  }
  i = 0;
  while (i < keys2.len) {
    __auto_type k = keys2.data[i];
    __auto_type c = counts2.data[k];
    if (c > max2) {
      max2 = c;
    }
    i = i + 1;
  }
  i = 0;
  while (i < keys2.len) {
    __auto_type k = keys2.data[i];
    if (counts2.data[k] == max2) {
      int tmp16_data[1];
      list_int tmp16 = {1, tmp16_data};
      tmp16.data[0] = k;
      list_int tmp17 = concat_list_int(modes2, tmp16);
      modes2 = tmp17;
    }
    i = i + 1;
  }
  char *tmp18 = _str(modes2);
  printf("%s\n", tmp18);
  return 0;
}
int main() { return _mochi_main(); }
